[gd_scene load_steps=4 format=3 uid="uid://ewhiun7ljryy"]

[ext_resource type="Theme" uid="uid://bmm3mvq11y045" path="res://theme.tres" id="1_i7feq"]
[ext_resource type="Script" path="res://scenes/players/Players.gd" id="2_xda1v"]
[ext_resource type="Script" path="res://addons/GodotPlayGameServices/scripts/players/players_client.gd" id="3_ldpls"]

[node name="Players" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_xda1v")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="NavBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/NavBar"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_i7feq")
text = "Back"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ScrollChild" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="Search" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/ScrollChild"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="SearchButton" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/ScrollChild/Search"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
theme = ExtResource("1_i7feq")
text = "Search Players"

[node name="SearchDisplay" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/ScrollChild/Search"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ScrollContainer/ScrollChild"]
layout_mode = 2

[node name="CurrentPlayer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/ScrollChild"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/ScrollChild/CurrentPlayer"]
layout_mode = 2
text = "Current Player"
horizontal_alignment = 1

[node name="CurrentPlayerDisplay" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/ScrollChild/CurrentPlayer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 25

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/ScrollContainer/ScrollChild"]
layout_mode = 2

[node name="Friends" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/ScrollChild"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/ScrollChild/Friends"]
layout_mode = 2
text = "Friends"
horizontal_alignment = 1

[node name="FriendsDisplay" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/ScrollChild/Friends"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 25

[node name="PlayGamesPlayersClient" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_ldpls")

[connection signal="current_player_loaded" from="PlayGamesPlayersClient" to="." method="_on_current_player_loaded"]
[connection signal="friends_loaded" from="PlayGamesPlayersClient" to="." method="_on_friends_loaded"]
[connection signal="player_searched" from="PlayGamesPlayersClient" to="." method="_on_player_searched"]
